@@ -26,69 +26,66 @@ class BroadcastServiceTest {
     @InjectMocks
     private BroadcastService broadcastService;
 
-    @BeforeEach
-    void setUp() {
-        // Setup is handled by Mockito
-    }
-
     @Test
     void testBroadcast_Success() {
         String message = "Test broadcast message";
-        List<Long> chatIds = Arrays.asList(12345L, 67890L, 11111L);
+        List<Long> chatIds = List.of(12345L, 67890L, 11111L);
 
         when(subscriberService.getActiveSubscribers()).thenReturn(chatIds);
-        doNothing().when(sender).sendText(anyLong(), anyString());
 
         broadcastService.broadcast(message);
 
-        verify(subscriberService, times(1)).getActiveSubscribers();
-        verify(sender, times(3)).sendText(anyLong(), eq(message));
+        verify(subscriberService).getActiveSubscribers();
         verify(sender).sendText(12345L, message);
         verify(sender).sendText(67890L, message);
         verify(sender).sendText(11111L, message);
+        verifyNoMoreInteractions(sender);
     }
 
     @Test
     void testBroadcast_EmptySubscribers() {
-        String message = "Test broadcast message";
-        List<Long> chatIds = List.of();
+        when(subscriberService.getActiveSubscribers()).thenReturn(List.of());
 
-        when(subscriberService.getActiveSubscribers()).thenReturn(chatIds);
+        broadcastService.broadcast("any");
 
-        broadcastService.broadcast(message);
-
-        verify(subscriberService, times(1)).getActiveSubscribers();
-        verify(sender, never()).sendText(anyLong(), anyString());
-    }
-
-    @Test
-    void testBroadcast_ExceptionHandling() {
-        String message = "Test broadcast message";
-        List<Long> chatIds = Arrays.asList(12345L, 67890L);
-
-        when(subscriberService.getActiveSubscribers()).thenReturn(chatIds);
-        doThrow(new RuntimeException("Network error")).when(sender).sendText(eq(12345L), anyString());
-        doNothing().when(sender).sendText(eq(67890L), anyString());
-
-        // Should not throw exception, should handle gracefully
-        broadcastService.broadcast(message);
-
-        verify(subscriberService, times(1)).getActiveSubscribers();
-        verify(sender, times(2)).sendText(anyLong(), eq(message));
+        verify(subscriberService).getActiveSubscribers();
+        verifyNoInteractions(sender);
     }
 
     @Test
     void testBroadcast_SingleSubscriber() {
         String message = "Test broadcast message";
-        List<Long> chatIds = List.of(12345L);
+        Long chatId = 12345L;
 
-        when(subscriberService.getActiveSubscribers()).thenReturn(chatIds);
-        doNothing().when(sender).sendText(anyLong(), anyString());
+        when(subscriberService.getActiveSubscribers()).thenReturn(List.of(chatId));
 
         broadcastService.broadcast(message);
 
-        verify(subscriberService, times(1)).getActiveSubscribers();
-        verify(sender, times(1)).sendText(12345L, message);
+        verify(subscriberService).getActiveSubscribers();
+        verify(sender).sendText(chatId, message);
+        verifyNoMoreInteractions(sender);
+    }
+
+    @Test
+    void testBroadcast_ExceptionIsPropagated() {
+        String message = "Test broadcast message";
+        List<Long> chatIds = List.of(12345L, 67890L);
+
+        when(subscriberService.getActiveSubscribers()).thenReturn(chatIds);
+        doThrow(new RuntimeException("Network error"))
+            .when(sender).sendText(12345L, message);
+
+        // ожидаем исключение — это текущий контракт сервиса
+        RuntimeException ex = org.junit.jupiter.api.Assertions.assertThrows(
+            RuntimeException.class,
+            () -> broadcastService.broadcast(message)
+        );
+
+        org.junit.jupiter.api.Assertions.assertEquals("Network error", ex.getMessage());
+
+        verify(sender).sendText(12345L, message);
+        verify(sender, never()).sendText(67890L, message);
     }
 }
+
 
